Update to release 2015.04.06-1

--- a/boot.ini
+++ b/boot.ini
@@ -16,13 +16,13 @@ ODROIDC-UBOOT-CONFIG
 # setenv m "1440x900p60hz"	# 1440x900
 # setenv m "1600x900p60hz"	# 1600x900
 # setenv m "1680x1050p60hz"	# 1680x1050
-# setenv m "720p"         	# 720p 1280x720
+setenv m "720p"         	# 720p 1280x720
 # setenv m "800p"         	# 1280x800
 # setenv m "sxga"         	# 1280x1024
 # setenv m "1080i50hz"          # 1080I@50Hz
 # setenv m "1080p24hz"          # 1080P@24Hz
 # setenv m "1080p50hz"          # 1080P@50Hz
-setenv m "1080p"                # 1080P@60Hz
+# setenv m "1080p"                # 1080P@60Hz
 # setenv m "1920x1200"    	# 1920x1200
 
 # HDMI DVI Mode Configuration
@@ -67,8 +67,8 @@ setenv hdmioutput "1"
 setenv condev "console=ttyS0,115200n8 console=tty0"   # on both
 
 # Default logo size
-setenv logosize "1080"
-#setenv logosize "720"
+setenv outputmode "720p"
+fatload mmc 0:1 ${loadaddr_logo} hardkernel-720.bmp
 
 
 ###########################################
@@ -77,21 +77,20 @@ if test "${hpd}" = "0"; then setenv hdmi_hpd "disablehpd=true"; fi
 if test "${cec}" = "1"; then setenv hdmi_cec "hdmitx=cecf"; fi
 
 # Boot Arguments
-setenv bootargs "root=UUID=/dev/mmcblk0p2 rootwait ro ${condev} no_console_suspend vdaccfg=0xa000 logo=osd1,loaded,0x7900000,${logosize}p,full dmfc=3 cvbsmode=576cvbs hdmimode=${m} m_bpp=${m_bpp} vout=${vout_mode} ${disableuhs} ${hdmi_hpd} ${hdmi_cec} quiet"
+setenv bootargs "root=/dev/mmcblk0p2 rootwait ro ${condev} no_console_suspend vdaccfg=0xa000 logo=osd1,loaded,0x7900000,${outputmode},full dmfc=3 cvbsmode=576cvbs hdmimode=${m} m_bpp=${m_bpp} vout=${vout_mode} ${disableuhs} ${hdmi_hpd} ${hdmi_cec} quiet"
 
 # Logo
-logo size ${logosize}p
+logo size ${outputmode}
 video open
 video clear
-video dev open ${logosize}p
-fatload mmc 0 ${loadaddr_logo} hardkernel-${logosize}.bmp
+video dev open ${outputmode}
 bmp display ${loadaddr_logo}
 bmp scale
 
 # Booting
-fatload mmc 0:1 0x21000000 uImage
-fatload mmc 0:1 0x22000000 uInitrd
-fatload mmc 0:1 0x21800000 meson8b_odroidc.dtb
+ext4load mmc 0:2 0x21000000 boot/uImage
+ext4load mmc 0:2 0x22000000 boot/uInitrd
+ext4load mmc 0:2 0x21800000 boot/meson8b_odroidc.dtb
 fdt addr 21800000
 
 if test "${vpu}" = "0"; then fdt rm /mesonstream; fdt rm /vdec; fdt rm /ppmgr; fi
