Add enabledac var and clean up boot.ini

--- a/boot.ini
+++ b/boot.ini
@@ -4,26 +4,26 @@ ODROIDC-UBOOT-CONFIG
 # Uncomment only a single Line! The line with setenv written.
 # At least one mode must be selected.
 
-# setenv m "vga"          	# 640x480
-# setenv m "480p"         	# 720x480
-# setenv m "576p"         	# 720x576
-# setenv m "800x480p60hz" 	# 800x480
-# setenv m "800x600p60hz" 	# 800x600
-# setenv m "1024x600p60hz"	# 1024x600
-# setenv m "1024x768p60hz"	# 1024x768
-# setenv m "1360x768p60hz" 	# 1360x768
-# setenv m "1366x768p60hz"	# 1366x768
-# setenv m "1440x900p60hz"	# 1440x900
-# setenv m "1600x900p60hz"	# 1600x900
-# setenv m "1680x1050p60hz"	# 1680x1050
-setenv m "720p"         	# 720p 1280x720
-# setenv m "800p"         	# 1280x800
-# setenv m "sxga"         	# 1280x1024
+# setenv m "vga"                # 640x480
+# setenv m "480p"               # 720x480
+# setenv m "576p"               # 720x576
+# setenv m "800x480p60hz"       # 800x480
+# setenv m "800x600p60hz"       # 800x600
+# setenv m "1024x600p60hz"      # 1024x600
+# setenv m "1024x768p60hz"      # 1024x768
+# setenv m "1360x768p60hz"      # 1360x768
+# setenv m "1366x768p60hz"      # 1366x768
+# setenv m "1440x900p60hz"      # 1440x900
+# setenv m "1600x900p60hz"      # 1600x900
+# setenv m "1680x1050p60hz"     # 1680x1050
+setenv m "720p"                 # 720p 1280x720
+# setenv m "800p"               # 1280x800
+# setenv m "sxga"               # 1280x1024
 # setenv m "1080i50hz"          # 1080I@50Hz
 # setenv m "1080p24hz"          # 1080P@24Hz
 # setenv m "1080p50hz"          # 1080P@50Hz
-# setenv m "1080p"                # 1080P@60Hz
-# setenv m "1920x1200"    	# 1920x1200
+# setenv m "1080p"              # 1080P@60Hz
+# setenv m "1920x1200"          # 1920x1200
 
 # HDMI DVI Mode Configuration
 setenv vout_mode "hdmi"
@@ -44,12 +44,10 @@ setenv hpd "1"
 # 0 = Disables HDMI CEC
 setenv cec "1"
 
-
 # UHS Card Configuration
 # Uncomment the line below to __DISABLE__ UHS-1 MicroSD support
 # This might break boot for some brand models of cards.
 setenv disableuhs "disableuhs"
-
 
 # Disable VPU (Video decoding engine, Saves RAM!!!)
 # 0 = disabled
@@ -61,15 +59,18 @@ setenv vpu "1"
 # 1 = enabled
 setenv hdmioutput "1"
 
+# PCM5102 audio DAC Enable/Disable
+# Uncomment the line below to __ENABLE__ Audio-DAC(PCM5102)
+# setenv enabledac "enabledac"
+
 # Default Console Device Setting
-# setenv condev "console=ttyS0,115200n8"        # on serial port
-# setenv condev "console=tty0"                    # on display (HDMI)
-setenv condev "console=ttyS0,115200n8 console=tty0"   # on both
+# setenv condev "console=ttyS0,115200n8"                # on serial port
+# setenv condev "console=tty0"                          # on display (HDMI)
+setenv condev "console=ttyS0,115200n8 console=tty0"     # on both
 
 # Default logo size
 setenv outputmode "720p"
 fatload mmc 0:1 ${loadaddr_logo} hardkernel-720.bmp
-
 
 ###########################################
 
@@ -77,7 +78,7 @@ if test "${hpd}" = "0"; then setenv hdmi_hpd "disablehpd=true"; fi
 if test "${cec}" = "1"; then setenv hdmi_cec "hdmitx=cecf"; fi
 
 # Boot Arguments
-setenv bootargs "root=/dev/mmcblk0p2 rootwait ro ${condev} no_console_suspend vdaccfg=0xa000 logo=osd1,loaded,0x7900000,${outputmode},full dmfc=3 cvbsmode=576cvbs hdmimode=${m} m_bpp=${m_bpp} vout=${vout_mode} ${disableuhs} ${hdmi_hpd} ${hdmi_cec} quiet"
+setenv bootargs "root=/dev/mmcblk0p2 rootwait ro ${condev} no_console_suspend vdaccfg=0xa000 logo=osd1,loaded,0x7900000,${outputmode},full dmfc=3 cvbsmode=576cvbs hdmimode=${m} m_bpp=${m_bpp} vout=${vout_mode} ${disableuhs} ${enabledac} ${hdmi_hpd} ${hdmi_cec} quiet"
 
 # Logo
 logo size ${outputmode}
