--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 u-boot-9c256c87b5ba97a626138d60f5af1ad5c235d55a.tar.gz
 u-boot-e6d5633f1654e3a43c68ca10e4b939aa12a2040f.tar.gz
 u-boot-86125f8efd6b3a3fc0839a03e1c0e9507999449d.tar.gz
+u-boot-b7b8dc21b64b9494618325c9b4d2fbae728aeed6.tar.gz
